syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.maksymuimanov.python.proto";
option java_outer_classname = "PythonProto";

service PythonGrpcService {
  rpc SendCode(PythonGrpcRequest) returns (PythonGrpcResponse) {}
}

message PythonGrpcRequest {
  string script = 1;
  repeated string fieldNames = 2;
}

message PythonGrpcResponse {
  map<string, string> fields = 1;
}